--- a/apps/oozie/src/oozie/static/oozie/less/workflow-editor.less
+++ b/apps/oozie/src/oozie/static/oozie/less/workflow-editor.less
@@ -290,6 +290,14 @@
   .ui-autocomplete {
     z-index: 4000;
   }
+
+  .toolbar-label {
+    position: relative;
+  }
+
+  .toolbar-dropdown {
+    box-shadow: none;
+  }
 }
 
 #addActionDemiModal {
