--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -1638,25 +1638,25 @@
     ## navmetaserver_auth_type=CMDB
 
     # Username of the CM user used for authentication.
-    ## auth_cmusername=hue
+    ## navmetadataservice_cmdb_user=hue
     # CM password of the user used for authentication.
-    ## auth_cmpassword=
+    ## navmetadataservice_cmdb_password=
     # Execute this script to produce the CM password. This will be used when the plain password is not set.
-    # auth_password_script=
+    # navmetadataservice_cmdb_password_script=
 
     # Username of the LDAP user used for authentication.
-    ## auth_ldapusername=hue
+    ## navmetadataservice_ldap_user=hue
     # LDAP password of the user used for authentication.
-    ## auth_ldappassword=
+    ## navmetadataservice_ldap_ppassword=
     # Execute this script to produce the LDAP password. This will be used when the plain password is not set.
-    ## auth_ldappassword_script=
+    ## navmetadataservice_ldap_password_script=
 
     # Username of the SAML user used for authentication.
-    ## auth_samlusername=hue
+    ## navmetadataservice_saml_user=hue
     ## SAML password of the user used for authentication.
-    # auth_samlpassword=
+    # navmetadataservice_saml_password=
     # Execute this script to produce the SAML password. This will be used when the plain password  is not set.
-    ## auth_samlpassword_script=
+    ## navmetadataservice_saml_password_script=
 
     # Perform Sentry privilege filtering.
     # Default to true automatically if the cluster is secure.
