HUE-5885 [editor] Remove double scrollbar on the editor help

--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -298,6 +298,10 @@
   border-right: 1px solid #dddddd;
 }
 
+.notebook .editor-help .tab-content {
+  border: none;
+}
+
 .empty-title {
   font-weight: normal;
 }
