HUE-5875 [metastore] Drop database modal message is misplaced
(cherry picked from commit e539a6a537ea50668ad40babcabb6c6218d04de9)

--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -2083,6 +2083,10 @@ input.no-margin, select.no-margin {
   margin-top: -10px;
 }
 
+.margin-top-5 {
+  margin-top: 5px;
+}
+
 .margin-top-10 {
   margin-top: 10px;
 }
