HUE-5917 [metadata] Add Django caching of security permissions
(cherry picked from commit e704615011449da0b8deab95bd1b50980ba1b3c1)

--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -1384,6 +1384,9 @@
   # Sentry configuration directory, where sentry-site.xml is located.
   ## sentry_conf_dir=/etc/sentry/conf
 
+  # Number of seconds when the privilege list of a user is cached.
+  ## privilege_checker_caching=30
+
 
 ###########################################################################
 # Settings to configure the ZooKeeper Lib
