HUE-5923 [assist] Show a spinner when search autocomplete is loading

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -662,3 +662,7 @@
   overflow: hidden;
   background-color: @cui-white;
 }
+
+.input-spinner {
+  background: url(/static/desktop/art/spinner-input.gif) no-repeat right -8px center !important;
+}
