HUE-5932 [metadata] Add client-side validation to the tag editor

--- a/desktop/core/src/desktop/static/desktop/less/hue-attributes.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-attributes.less
@@ -28,6 +28,8 @@
 @hue-primary-color-dark: #338BB8;
 @hue-primary-color-light: #DBE8F1;
 
+@hue-error-color: @cui-red-400;
+
 @hue-panel-border-radius: 2px;
 
 .hue-ease-transition(@attributes) {
