--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -565,6 +565,9 @@
     ## port=
     ## user=
     ## password=
+    # conn_max_age option to make database connection persistent value in seconds
+    # https://docs.djangoproject.com/en/1.9/ref/databases/#persistent-connections
+    ## conn_max_age=0
     # Execute this script to produce the database password. This will be used when 'password' is not set.
     ## password_script=/path/script
     ## name=desktop/desktop.db
