HUE-5960 [importer] The fixed top bar should adapt to responsive

--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -996,3 +996,11 @@ a:visited {
   background-color: #338BB8!important;
 }
 
+#importerComponents {
+  .step-indicator-fixed {
+    position: initial!important;
+  }
+  .vertical-spacer {
+    height: 0!important;
+  }
+}
