--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -1062,6 +1062,9 @@
   # Configure Livy to start in local 'process' mode, or 'yarn' workers.
   ## livy_server_session_kind=yarn
 
+  # Whether Livy requires client to perform Kerberos authentication.
+  ## security_enabled=false
+
   # Host of the Sql Server
   ## sql_server_host=localhost
 
