--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -1225,6 +1225,9 @@
   # Flag to turn on the morphline based Solr indexer.
   ## enable_new_indexer=false
 
+  # Oozie workspace template for indexing.
+  ## config_indexer_libs_path=/tmp/smart_indexer_lib
+
   # Flag to turn on the new metadata importer.
   ## enable_new_importer=false
 
