HUE-6000 [assist] Show search autocomplete errors in full

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -651,6 +651,10 @@
     color: #737373;
     font-style: italic;
   }
+
+  .nav-autocomplete-error {
+    height: inherit !important;
+  }
 }
 
 .nav-search-result {
