HUE-6001 [assist] Slow down the entry indication on search result click
This also removes the highlighting of the parent entry.

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -388,15 +388,15 @@
 }
 
 .highlightable {
-  -webkit-transition: all .5s linear;
-  -moz-transition: all .5s linear;
-  -o-transition: all .5s linear;
-  transition: all .5s linear;
+  -webkit-transition: all .6s ease;
+  -moz-transition: all .6s ease;
+  -o-transition: all .6s ease;
+  transition: all .6s ease;
 }
 
 .highlight {
   color: @hue-primary-color-dark !important;
-  padding-left: 8px;
+  padding-left: 10px;
 }
 
 .assist-details-header {
