HUE-6021 [metastore] Allow nicer formatting of metadata description

--- a/apps/metastore/src/metastore/static/metastore/less/metastore.less
+++ b/apps/metastore/src/metastore/static/metastore/less/metastore.less
@@ -233,3 +233,18 @@ h2.card-heading {
 .acl-actions span:hover {
   color: #999;
 }
+
+.show-inactive-on-hover {
+  .inactive-action {
+    opacity: 0;
+    vertical-align: top;
+  }
+  .editable-unsaved {
+    font-weight: normal;
+  }
+  &:hover {
+    .inactive-action {
+      opacity: 1;
+    }
+  }
+}
