--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -3551,3 +3551,7 @@ input:invalid:focus,textarea:invalid:focus,select:invalid:focus {
 .help-inline.muted {
   color: #999;
 }
+
+.vertical-align-top {
+  vertical-align: top;
+}
