HUE-5964 [useradmin] KOify user list page
(cherry picked from commit 45d2c0c26448e71f48a86319212a5f01fd7e65b9)

--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -1204,8 +1204,18 @@ a#advanced-btn:hover {
   cursor: default;
 }
 
+.hueCheckbox.disabled {
+  border: 1px solid #DDDDDD;
+  background-color: #FEFEFE;
+  cursor: not-allowed;
+}
+
 .hueCheckbox:hover {
   border-color: #999999;
+}
+
+.hueCheckbox.disabled:hover {
+  border-color: #DDDDDD;
 }
 
 .hueCheckboxText {
