HUE-6027 [core] The Autocompleter shouldn't overflow on the header
(cherry picked from commit fcfe98cf9e0aebfcbbf84ded037e134c2871503d)

--- a/desktop/core/src/desktop/static/desktop/less/hue-autocomplete.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-autocomplete.less
@@ -56,7 +56,7 @@
   background-color: #F9F9F9;
   line-height: 20px;
   font-size: 14px;
-  overflow-x: hidden;
+  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
