HUE-5724 [assist] Format the view SQL in the context popover and add copy and insert actions
(cherry picked from commit 2efeec1b440d00b97549c283ab1454be2b1aa541)

--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -905,15 +905,15 @@ h4.header {
   border-right: 2px solid #CCC;
 }
 
-.history-item .ace-hue {
+.ace-highlight .ace-hue {
   background-color: transparent !important;
 }
 
-.history-item .ace_invalid {
+.ace-highlight .ace_invalid {
   display: none;
 }
 
-.history-item .ace_line {
+.ace-highlight .ace_line {
   white-space: normal;
 }
 
