HUE-6032 [responsive] The mini and the regular jobbrowsers should co-exist

--- a/apps/jobbrowser/src/jobbrowser/static/jobbrowser/less/jobbrowser-embeddable.less
+++ b/apps/jobbrowser/src/jobbrowser/static/jobbrowser/less/jobbrowser-embeddable.less
@@ -16,7 +16,7 @@
  limitations under the License.
 */
 
-#jobbrowserComponents {
+.jobbrowser-components {
   .content-panel-inner {
     padding: 10px;
   }
