HUE-6040 [autocomplete] Rename value meta type to sample
(cherry picked from commit 83b9cfc0985c5d6b58ac4dc8f2eb50e8b63dd6a6)

--- a/desktop/core/src/desktop/templates/jasmineRunner.html
+++ b/desktop/core/src/desktop/templates/jasmineRunner.html
@@ -46,7 +46,7 @@
           keyword: 'keyword',
           orderBy: 'order by',
           table: 'table',
-          value: 'value',
+          sample: 'sample',
           variable: 'variable',
           view: 'view',
           virtual: 'virtual'
