HUE-5724 [assist] Apply SQL formatting to the view sql in the context popover
(cherry picked from commit 0b7172908935059228afea20480b4d3aa6787782)

--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -917,6 +917,10 @@ h4.header {
   white-space: normal;
 }
 
+.ace-highlight .ace-highlight-pre {
+  white-space: pre !important;
+}
+
 .history-status {
   width: 20px;
 }
