--- a/desktop/core/src/desktop/static/desktop/less/hue-attributes.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-attributes.less
@@ -84,3 +84,15 @@
   -ms-flex-direction: @direction;
   flex-direction: @direction;
 }
+
+.flex-flow(@flow) {
+  -webkit-flex-flow: @flow;
+  -ms-flex-flow: @flow;
+  flex-flow: @flow;
+}
+
+.flex-align-items(@align: stretch) {
+  -webkit-align-items: @align;
+  -ms-align-items: @align;
+  align-items: @align;
+}
