--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -795,6 +795,9 @@
   ## Activate the Dashboard link in the menu.
   # is_enabled=true
 
+  ## Activate the SQL Dashboard (beta).
+  # has_sql_enabled=false
+
   [[engines]]
 
     #  [[[solr]]]
