HUE-5964 [useradmin] Ported list of configurations

--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -1012,3 +1012,8 @@ a:visited {
 .vertical-align-top {
   vertical-align: top;
 }
+
+.form-actions {
+  width: initial!important;
+  position: initial!important;
+}
