--- a/desktop/core/src/desktop/static/desktop/less/hue-attributes.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-attributes.less
@@ -28,6 +28,7 @@
 @hue-primary-color-dark: #338BB8;
 @hue-primary-color-light: #DBE8F1;
 
+@hue-disabled-color: @cui-gray-100;
 @hue-error-color: @cui-red-400;
 
 @hue-panel-border-radius: 2px;
@@ -95,4 +96,10 @@
   -webkit-align-items: @align;
   -ms-align-items: @align;
   align-items: @align;
+}
+
+.flex-basis(@basis) {
+  -webkit-flex-basis: @basis;
+  -ms-flex-basis: @basis;
+  flex-basis: @basis;
 }
