HUE-6077 [frontend] Remove the left and right margin and border from container-fluid
(cherry picked from commit a787966a0e8b708c20479453f237c897baf7999f)

--- a/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
@@ -21,6 +21,7 @@
 
 @import "hue-assist";
 @import "hue-autocomplete";
+@import "hue-cui-overrides.less";
 
 .selectize-error {
   color: @hue-error-color;
