HUE-6077 [frontend] Fix app header positioning
(cherry picked from commit 1dfeef8ba12f75b24ef48e07d01c47d1aa4eb602)

--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -18,9 +18,10 @@
 @import (reference) "cui/colors.less";
 @import (reference) "hue-attributes.less";
 
-@import "hue-assist.less";
-@import "hue-autocomplete.less";
+@import "hue-assist";
+@import "hue-autocomplete";
 @import "hue-cui-overrides.less";
+@import "hue-cross-version.less";
 
 html {
   height: 100%;
@@ -921,11 +922,6 @@ a:visited {
   input.search-query {
     width: 70px;
   }
-}
-
-.selectize-error {
-  color: @hue-error-color;
-  font-size: 12px;
 }
 
 .uploadstatus {
