HUE-6077 [frontend] Remove the .nav hover effects for Hue 3
(cherry picked from commit ff0d15ce34bd04a8d1417a85dc923c808c576dc0)

--- a/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
@@ -5,3 +5,11 @@
 @import "hue-autocomplete";
 @import "hue-cui-overrides.less";
 @import "hue-cross-version.less";
+
+
+// Hue 3 CUI overrides
+
+.nav > li > a:hover,
+.nav > li > a:focus {
+  background-color: transparent !important;
+}
