--- a/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
@@ -6,6 +6,77 @@
 @import "hue-cui-overrides.less";
 @import "hue-cross-version.less";
 
+.svg-hue-logo-main {
+  fill: #f2f2f2;
+}
+
+.svg-hue-logo-trunk {
+  fill: #D7B9EB;
+}
+
+.hue3-navbar-fixed-top {
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+  margin-bottom: 0;
+  top: 28px;
+}
+
+.hue3-navbar-fixed-top.nokids .navbar-inner {
+  height: 45px;
+}
+
+.hue3-navbar-fixed-top .navbar-inner {
+  padding-left: 0;
+  padding-right: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  border-width: 0 0 1px;
+  border-bottom: 1px solid #DDD;
+  -webkit-box-shadow: 0 1px 10px rgba(0,0,0,.1);
+  -moz-box-shadow: 0 1px 10px rgba(0,0,0,.1);
+  box-shadow: 0 1px 10px rgba(0,0,0,.1);
+}
+
+
+.search-container {
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -ms-flex: 1 1 36px;
+  flex: 1 1 36px;
+  padding: 10px 10px 5px 10px;
+}
+
+.search-container > input {
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  border: 1px solid #DDD;
+  border-right: none;
+  flex: 1 1 100%;
+  height: 27px;
+  box-shadow: none;
+}
+
+.search-container > a {
+  cursor: pointer;
+  flex: 0 0 31px;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  border: 1px solid #DDD;
+  box-shadow: none;
+  font-size: 15px;
+  line-height: 29px;
+  background-color: #f9f9f9;
+  width: 31px;
+  height: 29px;
+}
+
+.search-container > a > i {
+  margin-left: 8px;
+}
 
 // Hue 3 CUI overrides
 
