--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -223,21 +223,23 @@ body {
 
 .search-container {
   .display-flex;
-  .flex(1 1 29px);
+  .flex(1 1 37px);
   position: relative;
+  margin: 8px 10px 0 10px;
 }
 
 .search-container > input {
   .flex(1 1 100%);
-  border-bottom-left-radius: 4px;
-  border-top-left-radius: 4px;
+  border-radius: 4px 0 0 4px;
   border: 1px solid @cui-gray-300;
   border-right: none;
   box-shadow: none;
+  margin-bottom: 0;
 }
 
 .search-container > a {
   .flex(0 0 31px);
+  margin-bottom: 0;
   cursor: pointer;
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
