HUE-6077 [frontend] Fix top nav caret color in old pages

--- a/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
@@ -101,3 +101,8 @@
 .nav > li > a:focus {
   background-color: transparent !important;
 }
+
+.nav .dropdown-toggle .caret {
+  border-top-color: @hue-primary-color-light !important;
+  border-bottom-color: @hue-primary-color-light !important;
+}
