HUE-6077 [frontend] Fix styling of assist search input

--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -247,7 +247,8 @@ body {
   border: 1px solid @cui-gray-300;
   box-shadow: none;
   font-size: 15px;
-  line-height: 29px;
+  height: 30px;
+  line-height: 30px;
   background-color: @cui-gray-050;
   width: 31px;
 }
