--- a/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
@@ -54,36 +54,34 @@
 
 
 .search-container {
-  display: -ms-flexbox;
-  display: flex;
+  .display-flex;
+  .flex(1 1 37px);
   position: relative;
-  -ms-flex: 1 1 36px;
-  flex: 1 1 36px;
-  padding: 10px 10px 5px 10px;
+  margin: 8px 10px 0 10px;
 }
 
 .search-container > input {
-  border-bottom-left-radius: 4px;
-  border-top-left-radius: 4px;
-  border: 1px solid #DDD;
+  .flex(1 1 100%);
+  border-radius: 4px 0 0 4px;
+  border: 1px solid @cui-gray-300;
   border-right: none;
-  flex: 1 1 100%;
-  height: 27px;
   box-shadow: none;
+  margin-bottom: 0;
 }
 
 .search-container > a {
+  .flex(0 0 31px);
+  margin-bottom: 0;
   cursor: pointer;
-  flex: 0 0 31px;
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
-  border: 1px solid #DDD;
+  border: 1px solid @cui-gray-300;
   box-shadow: none;
   font-size: 15px;
-  line-height: 29px;
-  background-color: #f9f9f9;
+  line-height: 30px;
+  height: 30px;
+  background-color: @cui-gray-050;
   width: 31px;
-  height: 29px;
 }
 
 .search-container > a > i {
