--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -17,13 +17,14 @@
 */
 
 @import (reference) "cui/colors.less";
+@import (reference) "cui/extra-variables.less";
 @import (reference) "hue-attributes.less";
 
 .snippet-move-placeholder {
   margin: 10px;
   height: 100px;
   background-color: #FAFAFA;
-  border: 2px dotted #CCC;
+  border: 2px dotted @cui-default-border-color;
 }
 
 .snippet-move-helper {
@@ -43,7 +44,7 @@
   position: absolute;
   height: 100%;
   width: 2px;
-  background-color: #F1F1F1;
+  background-color: @cui-default-border-color;
 }
 
 .question {
@@ -57,7 +58,7 @@
 }
 
 .notebook-snippet {
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid @cui-default-border-color;
   border-radius: 0;
 }
 
@@ -101,9 +102,9 @@
 
 .snippet-settings {
   background-color: #FFF;
-  border-left: 1px solid #e5e5e5;
-  border-right: 1px solid #e5e5e5;
-  border-bottom: 1px solid #e5e5e5;
+  border-left: 1px solid @cui-default-border-color;
+  border-right: 1px solid @cui-default-border-color;
+  border-bottom: 1px solid @cui-default-border-color;
   .hue-box-shadow-bottom;
 }
 
@@ -294,8 +295,8 @@
 
 .notebook .tab-content {
   background-color: #FFFFFF;
-  border-left: 1px solid #dddddd;
-  border-right: 1px solid #dddddd;
+  border-left: 1px solid @cui-default-border-color;
+  border-right: 1px solid @cui-default-border-color;
 }
 
 .notebook .editor-help .tab-content {
@@ -389,7 +390,7 @@
 }
 
 .snippet-code-resizer, .snippet-log-resizer {
-  border-top: 1px solid #F1F1F1;
+  border-top: 1px solid @cui-default-border-color;
   cursor: row-resize;
   text-align: center;
   font-size: 12px;
@@ -690,7 +691,7 @@ h1.empty {
   .editable {
     font-size: 20px;
     font-weight: bold;
-    border-bottom: 2px solid #CCC !important;
+    border-bottom: 2px solid @cui-default-border-color !important;
   }
   .tab-content, .content-panel {
     overflow: visible;
@@ -752,7 +753,7 @@ table.airy tr td {
 
 
 .results-images {
-  border-left: 5px solid #DDD;
+  border-left: 5px solid @cui-default-border-color;
   background-color: #f5f5f5;
   padding: 5px;
 }
@@ -881,7 +882,7 @@ h4.header {
   font-size: 14px;
   text-transform: uppercase;
   padding-left: 4px;
-  border-bottom: 1px solid #DDD;
+  border-bottom: 1px solid @cui-default-border-color;
   padding-bottom: 3px;
 }
 
@@ -891,8 +892,8 @@ h4.header {
 }
 
 .history-table tbody tr:hover {
-  border-left: 2px solid #CCC;
-  border-right: 2px solid #CCC;
+  border-left: 2px solid @cui-default-border-color;
+  border-right: 2px solid @cui-default-border-color;
 }
 
 .history-table tbody tr:hover td, .history-table tbody tr:hover th {
@@ -901,8 +902,8 @@ h4.header {
 
 .history-table tbody tr.highlight {
   background-color: #f7f7f9;
-  border-left: 2px solid #CCC;
-  border-right: 2px solid #CCC;
+  border-left: 2px solid @cui-default-border-color;
+  border-right: 2px solid @cui-default-border-color;
 }
 
 .ace-highlight .ace-hue {
