HUE-6077 [frontend] Fix the snippet progress bar
(cherry picked from commit e666eae2c21985125fd087e3ca346a6f802f1657)

--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -527,6 +527,15 @@ h1.empty {
   position: absolute;
 }
 
+.progress-snippet {
+  background-image: none;
+  box-shadow: none;
+}
+
+.progress-snippet .bar {
+  background-image: none;
+}
+
 .progress .bar {
   background-repeat: repeat-x;
 }
