HUE-6077 [frontend] Improved spacing in the app-specific navbar

--- a/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
@@ -21,3 +21,14 @@
   margin-left: 0;
   margin-right: 0;
 }
+
+.navbar .navbar-inner {
+  padding-right: 24px;
+
+  li {
+    margin-right: 10px;
+  }
+  li a:hover {
+    background-color: transparent;
+  }
+}
