--- a/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
@@ -45,8 +45,7 @@
 }
 
 .hue3-navbar-fixed-top .navbar-inner {
-  padding-left: 0;
-  padding-right: 0;
+  padding-right: 24px;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
